--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/notes"
+            android:fontFamily=""
             android:textColor="#1C2121"
             android:textSize="26sp"
             android:textStyle="bold" />
