--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,4 +11,7 @@
         <item name="android:elevation">1dp</item>
         <item name="android:background">@drawable/shape_while_bg</item>
     </style>
+    <style name="fontFamily">
+        <item name="android:fontFamily">@font/nunito_regular</item>
+    </style>
 </resources>
